fix last align bugs

--- a/protsushyn-exam.v.2.0.css
+++ b/protsushyn-exam.v.2.0.css
@@ -233,149 +233,149 @@ section:nth-of-type(1) h1 a {
 
 .choose {
     position: relative;
-    display: block;
+    display: flex;
+    flex-wrap: wrap;
     background-color: #1A1919;
-    height: 350px;
-    width: 1210px;
+    height: 30vw;
+    width: 100%;
     margin: 70px auto;
     border-radius: 5px;
+    justify-content: center;
+    align-items: center;
+    align-content: center;
 }
 
-.choose h2 {
-    position: absolute;
-    top: 100px;
-    left: 300px;
-}
-
-.choose p {
-    position: absolute;
-    top: 180px;
-    left: 350px;
+.choose h2, p {
+    margin: 0;
+    padding: 10px;
+    width: 100%;
 }
 
 .choose img:nth-of-type(1) {
     position: absolute;
-    top: 23px;
-    left: 120px;
+    top: 15%;
+    left: 10%;
 }
 
 .choose img:nth-of-type(2) {
     position: absolute;
-    top: 30px;
-    left: 650px;
+    top: 5%;
+    left: 52%;
 }
 
 .choose img:nth-of-type(3) {
     position: absolute;
-    top: 42px;
-    left: 930px;
+    top: 8%;
+    left: 75%;
 }
 
 .choose img:nth-of-type(4) {
     position: absolute;
-    top: 220px;
-    left: 20px;
+    top: 60%;
+    left: 5%;
 }
 
 .choose img:nth-of-type(5) {
     position: absolute;
-    top: 270px;
-    left: 250px;
+    top: 70%;
+    left: 28%;
 }
 
 .choose img:nth-of-type(6) {
     position: absolute;
-    top: 260px;
-    left: 725px;
+    top: 78%;
+    left: 60%;
 }
 
 .choose img:nth-of-type(7) {
     position: absolute;
-    top: 220px;
-    left: 1050px;
+    top: 65%;
+    left: 80%;
 }
 
 .choose img:nth-of-type(8) {
     position: absolute;
-    top: 100px;
-    left: 1120px;
+    top: 40%;
+    left: 90%;
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 1100px) {
     .choose {
-        position: relative;
-        display: block;
-        background-color: #1A1919;
-        height: 470px;
-        width: 430px;
+        height: 50vw;
+        width: 100%;
         margin: 30px auto;
-        border-radius: 5px;
     }
     
     .choose h2 {
-        position: absolute;
-        top: 160px;
-        left: 10px;
         font-size: 1.7rem;
         margin: 0 30px;
     }
     
     .choose p {
-        position: absolute;
-        top: 240px;
-        left: 0px;
+        margin: 0 20px;
+    }
+}
+
+@media screen and (max-width: 800px) {
+    .choose {
+        height: 60vw;
+    }
+    
+    .choose h2 {
+        font-size: 1.5rem;
         margin: 0 20px;
     }
     
-    .choose img:nth-of-type(1) {
-        position: absolute;
-        top: 35px;
-        left: 20px;
+    .choose p {
+        margin: 0 15px;
     }
-    
+
     .choose img:nth-of-type(2) {
         position: absolute;
-        top: 80px;
-        left: 150px;
+        top: 5%;
+        left: 40%;
     }
-    
+
     .choose img:nth-of-type(3) {
         position: absolute;
-        top: 22px;
-        left: 230px;
+        top: 8%;
+        left: 60%;
     }
-    
+
+    .choose img:nth-of-type(8) {
+        position: absolute;
+        top: 20%;
+        left: 75%;
+    }
+}
+
+@media screen and (max-width: 600px) {
+    .choose {
+        height: 80vw;
+    }
+
+    .choose img {
+        width: 10%;
+    }
+
     .choose img:nth-of-type(4) {
         position: absolute;
-        top: 320px;
-        left: 20px;
+        top: 70%;
+        left: 5%;
     }
     
     .choose img:nth-of-type(5) {
         position: absolute;
-        top: 390px;
-        left: 120px;
-    }
-    
-    .choose img:nth-of-type(6) {
-        position: absolute;
-        top: 320px;
-        left: 225px;
+        top: 80%;
+        left: 28%;
     }
     
     .choose img:nth-of-type(7) {
         position: absolute;
-        top: 400px;
-        left: 330px;
-    }
-    
-    .choose img:nth-of-type(8) {
-        position: absolute;
-        top: 80px;
-        left: 340px;
+        top: 75%;
+        left: 80%;
     }
 }
-
 /*Section 3 style*/
 
 section:nth-of-type(3) h2, 
@@ -611,20 +611,19 @@ footer {
     align-items: center;
 }
 
-footer:first-child {
+footer p:nth-of-type(1) {
     text-align: left;
 }
 
 .social {
-    display: block;
+    display: flex;
     margin: 20px auto;
-    text-align-last: justify;
 }
 
-footer:last-child {
+footer p:nth-of-type(2) {
     text-align: right;
 }
 
 .social img {
-    width: 22%;
+    padding: 10px;
 }
